# AntCode

./: .dockerignore  .dockerignore.backend  .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  main.py  pyproject.toml
services/gateway/: README.md  pyproject.toml
services/gateway/src/antcode_gateway/: __init__.py  __main__.py  auth.py  config.py  main.py  rate_limit.py  server.py
services/gateway/src/antcode_gateway/handlers/: __init__.py  heartbeat.py  logs.py  poll.py  result.py
services/gateway/src/antcode_gateway/services/: __init__.py  gateway_service.py
services/master/: README.md  pyproject.toml
services/master/src/antcode_master/: __init__.py  __main__.py  leader.py  memory_queue.py  queue_backend.py  task_persistence.py
services/master/src/antcode_master/dispatch/: __init__.py  policies.py  selector.py
services/master/src/antcode_master/loops/: __init__.py  dispatcher_loop.py  reconcile_loop.py  result_loop.py  retry_loop.py  scheduler_event_loop.py  scheduler_loop.py
services/web_api/: README.md  pyproject.toml
services/web_api/src/antcode_web_api/: __init__.py  __main__.py  app.py  app_factory.py  deps.py  exceptions.py  lifespan.py  openapi.py  response.py  routes.py
services/web_api/src/antcode_web_api/middleware/: __init__.py  middleware.py
services/web_api/src/antcode_web_api/routes/: __init__.py
services/web_api/src/antcode_web_api/routes/v1/: __init__.py  alert.py  audit.py  base.py  branding.py  crawl.py  dashboard.py  envs.py  git_credentials.py  logs.py  monitoring.py  project.py  project_download.py  project_sync.py  project_versions.py  retry.py  runs.py  runtimes.py  system_config.py  tasks.py  users.py  websocket_logs.py  workers.py
services/web_api/src/antcode_web_api/services/: __init__.py
services/web_api/src/antcode_web_api/services/projects/: __init__.py  project_file_service.py
services/web_api/src/antcode_web_api/utils/: simple_yaml.py
services/web_api/src/antcode_web_api/websockets/: __init__.py  log_notifier.py  log_realtime_handler.py  redis_log_stream_service.py  websocket_connection_manager.py  websocket_log_service.py
services/worker/: README.md  pyproject.toml
services/worker/config/: logging.example.yaml  worker.example.yaml
services/worker/scripts/: doctor.sh  run.sh
services/worker/src/antcode_worker/: __init__.py  __main__.py  cli.py  config.py
services/worker/src/antcode_worker/app/: __init__.py  lifecycle.py  main.py  wiring.py
services/worker/src/antcode_worker/domain/: __init__.py  enums.py  errors.py  events.py  models.py
services/worker/src/antcode_worker/engine/: __init__.py  engine.py  policies.py  scheduler.py  state.py
services/worker/src/antcode_worker/executor/: __init__.py  artifacts.py  base.py  limits.py  process.py  sandbox.py
services/worker/src/antcode_worker/heartbeat/: __init__.py  reporter.py  system_metrics.py
services/worker/src/antcode_worker/logging/: __init__.py  archiver.py  streamer.py
services/worker/src/antcode_worker/logs/: __init__.py  archive.py  batch.py  manager.py  realtime.py  spool.py  streamer.py  wal.py
services/worker/src/antcode_worker/observability/: __init__.py  health.py  metrics.py  server.py  tracing.py
services/worker/src/antcode_worker/plugins/: __init__.py  base.py  registry.py
services/worker/src/antcode_worker/plugins/code/: __init__.py  plugin.py
services/worker/src/antcode_worker/plugins/render/: __init__.py  plugin.py
services/worker/src/antcode_worker/plugins/spider/: __init__.py  plugin.py
services/worker/src/antcode_worker/projects/: __init__.py  fetcher.py
services/worker/src/antcode_worker/runtime/: __init__.py  builder.py  cache_gc.py  gc.py  hash.py  locks.py  manager.py  spec.py  uv_manager.py
services/worker/src/antcode_worker/security/: __init__.py  identity.py  secrets.py  verify.py
services/worker/src/antcode_worker/services/: __init__.py  log_cleanup.py  resilience.py
services/worker/src/antcode_worker/services/credential/: __init__.py  base.py  env_store.py  file_store.py  service.py
services/worker/src/antcode_worker/transport/: __init__.py  base.py  factory.py  flow_control.py
services/worker/src/antcode_worker/transport/gateway/: __init__.py  auth.py  codecs.py  reconnect.py  (+1 more)
services/worker/src/antcode_worker/utils/: __init__.py  exceptions.py  ids.py  json.py  time.py
src/tasks/antcode_worker/: .dockerignore  .gitignore  README.md  __init__.py  __main__.py  cli.py  config.py  pyproject.toml
src/tasks/antcode_worker/api/: __init__.py  app.py  deps.py  schemas.py
src/tasks/antcode_worker/api/routes/: __init__.py  envs.py  node.py  projects.py  queue.py  spider.py  tasks.py
src/tasks/antcode_worker/core/: __init__.py  engine.py  scheduler.py  signals.py
src/tasks/antcode_worker/domain/: __init__.py  events.py  interfaces.py  models.py
src/tasks/antcode_worker/engine/: __init__.py
src/tasks/antcode_worker/executors/: __init__.py  base.py  code_executor.py  render_executor.py  secure_executor.py  spider_executor.py
src/tasks/antcode_worker/grpc_generated/: __init__.py  common_pb2.pyi  node_service_pb2.pyi  node_service_pb2_grpc.py
src/tasks/antcode_worker/models/: __init__.py  task.py
src/tasks/antcode_worker/proto/: node_service.proto
src/tasks/antcode_worker/scripts/: generate_proto.py
src/tasks/antcode_worker/services/: __init__.py  capability_service.py  communication_manager.py  env_service.py  heartbeat_service.py  log_buffer.py  log_service.py  master_client.py  metrics_service.py  project_cache.py  project_service.py  resource_monitor.py  task_service.py  websocket_client.py
src/tasks/antcode_worker/spider/: __init__.py  base.py  client.py  middlewares.py  render_client.py  render_spider.py  request.py  selector.py
src/tasks/antcode_worker/spider/examples/: __init__.py  render_spider_example.py
src/tasks/antcode_worker/transport/: __init__.py  communication_manager.py  grpc_client.py  http_client.py  manager.py  protocol.py  resilient_client.py
src/tasks/antcode_worker/utils/: __init__.py  exceptions.py  hash_utils.py  serialization.py
(+640 files in other folders)
