[project]
name = "antcode"
version = "0.1.0"
description = "AntCode - 基于FastAPI的任务调度和项目管理平台"
requires-python = ">=3.11"
dependencies = [
    # Web框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.20",
    
    # 数据库
    "tortoise-orm>=0.21.0",
    "aerich>=0.7.2",
    "asyncmy>=0.2.9",      # MySQL驱动
    "asyncpg>=0.29.0",     # PostgreSQL驱动
    
    # 数据验证
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # 身份认证
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
    
    # 任务调度
    "apscheduler>=3.10.0",
    
    # 缓存
    "redis>=5.0.0",
    
    # 日志
    "loguru>=0.7.0",
    
    # 工具库
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "ujson>=5.9.0",
    "websockets>=12.0",
]


