[project]
name = "antcode"
version = "0.1.0"
description = "AntCode - 基于FastAPI的任务调度和项目管理平台"
requires-python = ">=3.11"
dependencies = [
    # Web框架
    "fastapi==0.123.7",
    "uvicorn[standard]==0.38.0",
    "python-multipart>=0.0.20",
    # 数据库
    "tortoise-orm>=0.21.0",
    "asyncmy>=0.2.9",  # MySQL驱动
    "asyncpg>=0.29.0",  # PostgreSQL驱动
    # 数据验证
    "pydantic[email]>=2.0.0",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    # 身份认证
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=41.0.0",
    # 任务调度
    "apscheduler>=3.10.0",
    # 缓存
    "redis==7.1.0",
    # 日志
    "loguru>=0.7.0",
    # 工具库
    "aiofiles==25.1.0",
    "psutil==7.1.3",
    "httpx>=0.28.1",
    "ujson>=5.9.0",
    "websockets>=12.0",
    # 高性能序列化与压缩
    "msgpack>=1.0.0",
    "lz4>=4.3.0",
    "aerich==0.9.2",
    "bcrypt==4.0.1",
    # gRPC
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
]







[tool.aerich]
tortoise_orm = "src.core.db_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    # 忽略 passlib 库中的 crypt 模块弃用警告（第三方库问题，Python 3.13 前无法解决）
    "ignore:'crypt' is deprecated:DeprecationWarning",
    # 忽略 WebSocket 和旧版 CommunicationManager 弃用警告（这是我们故意添加的迁移提示）
    "ignore:websocket_client 模块已弃用:DeprecationWarning",
    "ignore:services.communication_manager 模块已弃用:DeprecationWarning",
]
