[project]
name = "antcode-gateway"
version = "0.1.0"
description = "AntCode Gateway 网关服务 - Data Plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖
    "antcode-core",
    "antcode-contracts",

    # gRPC 框架
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",

    # 日志
    "loguru>=0.7.0",

    # 配置
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Redis（用于 Streams 读取）
    "redis>=5.0.0",

    # 工具库
    "ujson>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
antcode-core = { workspace = true }
antcode-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antcode_gateway"]

[tool.hatch.build.targets.sdist]
include = ["src/antcode_gateway"]
