[project]
name = "antcode-master"
version = "0.1.0"
description = "AntCode Master 调度服务 - Schedule Plane"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖
    "antcode-core",

    # 异步支持
    "asyncio>=3.4.3",

    # 工具库
    "ujson>=5.9.0",
]

[tool.uv.sources]
antcode-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antcode_master"]

[tool.hatch.build.targets.sdist]
include = ["src/antcode_master"]
