[project]
name = "antcode-worker"
version = "0.1.0"
description = "AntCode Worker 执行器服务 - Execution Plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖
    "antcode-core",
    "antcode-contracts",

    # gRPC 框架
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",

    # 数据验证
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # HTTP 客户端
    "aiohttp>=3.9.0",
    "httpx[socks]>=0.28.0",

    # 爬虫相关
    "lxml>=5.0.0",
    "cssselect>=1.2.0",
    "curl_cffi>=0.7.0",
    "DrissionPage>=4.0.0",

    # 系统与监控
    "psutil>=5.9.0",

    # 日志与配置
    "loguru>=0.7.0",
    "PyYAML>=6.0",

    # 序列化
    "ujson>=5.8.0",
    "msgpack>=1.0.0",

    # 异步文件操作
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
]

[project.scripts]
antcode-worker = "antcode_worker.cli:main"

[tool.uv.sources]
antcode-core = { workspace = true }
antcode-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/antcode_worker"]

[tool.hatch.build.targets.sdist]
include = ["src/antcode_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (require external services)",
]
filterwarnings = [
    "ignore::DeprecationWarning:redis",
]
